Lab_3/Code/syntax.output
Terminals unused in grammar

   LOWER_THAN_ELSE


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | FunDeclaration ExtDefList
    4           | %empty

    5 ExtDef: Specifier ExtDecList SEMI
    6       | Specifier SEMI
    7       | Specifier FunDec CompSt

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 FunDeclaration: Specifier FunDec SEMI

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag

   15 OptTag: ID
   16       | %empty

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB
   20       | VarDec LB error RB

   21 FunDec: ID LP VarList RP
   22       | ID LP RP
   23       | error RP

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec

   26 ParamDec: Specifier VarDec

   27 CompSt: LC DefList StmtList RC
   28       | error RC

   29 StmtList: Stmt StmtList
   30         | %empty

   31 Stmt: Exp SEMI
   32     | CompSt
   33     | RETURN Exp SEMI
   34     | IF LP Exp RP Stmt
   35     | IF LP Exp RP Stmt ELSE Stmt
   36     | WHILE LP Exp RP Stmt
   37     | error SEMI

   38 DefList: Def DefList
   39        | %empty

   40 Def: Specifier DecList SEMI

   41 DecList: Dec
   42        | Dec COMMA DecList

   43 Dec: VarDec
   44    | VarDec ASSIGNOP Exp

   45 Exp: Exp ASSIGNOP Exp
   46    | Exp AND Exp
   47    | Exp OR Exp
   48    | Exp RELOP Exp
   49    | Exp PLUS Exp
   50    | Exp MINUS Exp
   51    | Exp STAR Exp
   52    | Exp DIV Exp
   53    | LP Exp RP
   54    | MINUS Exp
   55    | NOT Exp
   56    | ID LP Args RP
   57    | ID LP RP
   58    | Exp LB Exp RB
   59    | Exp DOT ID
   60    | ID
   61    | INT
   62    | FLOAT
   63    | LP error RP
   64    | LB error RB

   65 Args: Exp COMMA Args
   66     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 20 23 28 37 63 64
INT (258) 19 61
FLOAT (259) 62
ID (260) 15 17 18 21 22 56 57 59 60
SEMI (261) 5 6 10 31 33 37 40
COMMA (262) 9 24 42 65
ASSIGNOP (263) 44 45
RELOP (264) 48
PLUS (265) 49
MINUS (266) 50 54
STAR (267) 51
DIV (268) 52
AND (269) 46
OR (270) 47
NOT (271) 55
DOT (272) 59
TYPE (273) 11
LP (274) 21 22 34 35 36 53 56 57 63
RP (275) 21 22 23 34 35 36 53 56 57 63
LB (276) 19 20 58 64
RB (277) 19 20 58 64
LC (278) 13 27
RC (279) 13 27 28
STRUCT (280) 13 14
RETURN (281) 33
IF (282) 34 35
ELSE (283) 35
WHILE (284) 36
UMINUS (285)
LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
Program (33)
    on left: 1, on right: 0
ExtDefList (34)
    on left: 2 3 4, on right: 1 2 3
ExtDef (35)
    on left: 5 6 7, on right: 2
ExtDecList (36)
    on left: 8 9, on right: 5 9
FunDeclaration (37)
    on left: 10, on right: 3
Specifier (38)
    on left: 11 12, on right: 5 6 7 10 26 40
StructSpecifier (39)
    on left: 13 14, on right: 12
OptTag (40)
    on left: 15 16, on right: 13
Tag (41)
    on left: 17, on right: 14
VarDec (42)
    on left: 18 19 20, on right: 8 9 19 20 26 43 44
FunDec (43)
    on left: 21 22 23, on right: 7 10
VarList (44)
    on left: 24 25, on right: 21 24
ParamDec (45)
    on left: 26, on right: 24 25
CompSt (46)
    on left: 27 28, on right: 7 32
StmtList (47)
    on left: 29 30, on right: 27 29
Stmt (48)
    on left: 31 32 33 34 35 36 37, on right: 29 34 35 36
DefList (49)
    on left: 38 39, on right: 13 27 38
Def (50)
    on left: 40, on right: 38
DecList (51)
    on left: 41 42, on right: 40 42
Dec (52)
    on left: 43 44, on right: 41 42
Exp (53)
    on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
    63 64, on right: 31 33 34 35 36 44 45 46 47 48 49 50 51 52 53 54
    55 58 59 65 66
Args (54)
    on left: 65 66, on right: 56 65


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 4 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    FunDeclaration   go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 2

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag

    ID  shift, and go to state 9

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 10
    Tag     go to state 11


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 12


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 4 (ExtDefList)

    ExtDefList       go to state 13
    ExtDef           go to state 5
    FunDeclaration   go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 6

    3 ExtDefList: FunDeclaration . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 4 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 5
    FunDeclaration   go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    5 ExtDef: Specifier . ExtDecList SEMI
    6       | Specifier . SEMI
    7       | Specifier . FunDec CompSt
   10 FunDeclaration: Specifier . FunDec SEMI

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 9

   15 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


State 10

   13 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 21


State 11

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 12

    0 $accept: Program $end .

    $default  accept


State 13

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 14

    3 ExtDefList: FunDeclaration ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 15

   23 FunDec: error . RP

    RP  shift, and go to state 22


State 16

   18 VarDec: ID .
   21 FunDec: ID . LP VarList RP
   22       | ID . LP RP

    LP  shift, and go to state 23

    $default  reduce using rule 18 (VarDec)


State 17

    6 ExtDef: Specifier SEMI .

    $default  reduce using rule 6 (ExtDef)


State 18

    5 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


State 19

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 8 (ExtDecList)


State 20

    7 ExtDef: Specifier FunDec . CompSt
   10 FunDeclaration: Specifier FunDec . SEMI

    error  shift, and go to state 27
    SEMI   shift, and go to state 28
    LC     shift, and go to state 29

    CompSt  go to state 30


State 21

   13 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 39 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 32
    Def              go to state 33


State 22

   23 FunDec: error RP .

    $default  reduce using rule 23 (FunDec)


State 23

   21 FunDec: ID LP . VarList RP
   22       | ID LP . RP

    TYPE    shift, and go to state 1
    RP      shift, and go to state 34
    STRUCT  shift, and go to state 2

    Specifier        go to state 35
    StructSpecifier  go to state 8
    VarList          go to state 36
    ParamDec         go to state 37


State 24

    5 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 5 (ExtDef)


State 25

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 38

    ExtDecList  go to state 39
    VarDec      go to state 19


State 26

   19 VarDec: VarDec LB . INT RB
   20       | VarDec LB . error RB

    error  shift, and go to state 40
    INT    shift, and go to state 41


State 27

   28 CompSt: error . RC

    RC  shift, and go to state 42


State 28

   10 FunDeclaration: Specifier FunDec SEMI .

    $default  reduce using rule 10 (FunDeclaration)


State 29

   27 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 39 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 43
    Def              go to state 33


State 30

    7 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 7 (ExtDef)


State 31

   40 Def: Specifier . DecList SEMI

    ID  shift, and go to state 38

    VarDec   go to state 44
    DecList  go to state 45
    Dec      go to state 46


State 32

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 47


State 33

   38 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 39 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 48
    Def              go to state 33


State 34

   22 FunDec: ID LP RP .

    $default  reduce using rule 22 (FunDec)


State 35

   26 ParamDec: Specifier . VarDec

    ID  shift, and go to state 38

    VarDec  go to state 49


State 36

   21 FunDec: ID LP VarList . RP

    RP  shift, and go to state 50


State 37

   24 VarList: ParamDec . COMMA VarList
   25        | ParamDec .

    COMMA  shift, and go to state 51

    $default  reduce using rule 25 (VarList)


State 38

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


State 39

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 40

   20 VarDec: VarDec LB error . RB

    RB  shift, and go to state 52


State 41

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 53


State 42

   28 CompSt: error RC .

    $default  reduce using rule 28 (CompSt)


State 43

   27 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 54
    INT     shift, and go to state 55
    FLOAT   shift, and go to state 56
    ID      shift, and go to state 57
    MINUS   shift, and go to state 58
    NOT     shift, and go to state 59
    LP      shift, and go to state 60
    LB      shift, and go to state 61
    LC      shift, and go to state 29
    RETURN  shift, and go to state 62
    IF      shift, and go to state 63
    WHILE   shift, and go to state 64

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 65
    StmtList  go to state 66
    Stmt      go to state 67
    Exp       go to state 68


State 44

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB
   43 Dec: VarDec .
   44    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 69
    LB        shift, and go to state 26

    $default  reduce using rule 43 (Dec)


State 45

   40 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 70


State 46

   41 DecList: Dec .
   42        | Dec . COMMA DecList

    COMMA  shift, and go to state 71

    $default  reduce using rule 41 (DecList)


State 47

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 48

   38 DefList: Def DefList .

    $default  reduce using rule 38 (DefList)


State 49

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB
   26 ParamDec: Specifier VarDec .

    LB  shift, and go to state 26

    $default  reduce using rule 26 (ParamDec)


State 50

   21 FunDec: ID LP VarList RP .

    $default  reduce using rule 21 (FunDec)


State 51

   24 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 35
    StructSpecifier  go to state 8
    VarList          go to state 72
    ParamDec         go to state 37


State 52

   20 VarDec: VarDec LB error RB .

    $default  reduce using rule 20 (VarDec)


State 53

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


State 54

   28 CompSt: error . RC
   37 Stmt: error . SEMI

    SEMI  shift, and go to state 73
    RC    shift, and go to state 42


State 55

   61 Exp: INT .

    $default  reduce using rule 61 (Exp)


State 56

   62 Exp: FLOAT .

    $default  reduce using rule 62 (Exp)


State 57

   56 Exp: ID . LP Args RP
   57    | ID . LP RP
   60    | ID .

    LP  shift, and go to state 74

    $default  reduce using rule 60 (Exp)


State 58

   54 Exp: MINUS . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 75


State 59

   55 Exp: NOT . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 76


State 60

   53 Exp: LP . Exp RP
   63    | LP . error RP

    error  shift, and go to state 77
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 78


State 61

   64 Exp: LB . error RB

    error  shift, and go to state 79


State 62

   33 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 80


State 63

   34 Stmt: IF . LP Exp RP Stmt
   35     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 81


State 64

   36 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 82


State 65

   32 Stmt: CompSt .

    $default  reduce using rule 32 (Stmt)


State 66

   27 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 83


State 67

   29 StmtList: Stmt . StmtList

    error   shift, and go to state 54
    INT     shift, and go to state 55
    FLOAT   shift, and go to state 56
    ID      shift, and go to state 57
    MINUS   shift, and go to state 58
    NOT     shift, and go to state 59
    LP      shift, and go to state 60
    LB      shift, and go to state 61
    LC      shift, and go to state 29
    RETURN  shift, and go to state 62
    IF      shift, and go to state 63
    WHILE   shift, and go to state 64

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 65
    StmtList  go to state 84
    Stmt      go to state 67
    Exp       go to state 68


State 68

   31 Stmt: Exp . SEMI
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    SEMI      shift, and go to state 85
    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    LB        shift, and go to state 95


State 69

   44 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 96


State 70

   40 Def: Specifier DecList SEMI .

    $default  reduce using rule 40 (Def)


State 71

   42 DecList: Dec COMMA . DecList

    ID  shift, and go to state 38

    VarDec   go to state 44
    DecList  go to state 97
    Dec      go to state 46


State 72

   24 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 24 (VarList)


State 73

   37 Stmt: error SEMI .

    $default  reduce using rule 37 (Stmt)


State 74

   56 Exp: ID LP . Args RP
   57    | ID LP . RP

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    RP     shift, and go to state 98
    LB     shift, and go to state 61

    Exp   go to state 99
    Args  go to state 100


State 75

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   54    | MINUS Exp .
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    DOT  shift, and go to state 94
    LB   shift, and go to state 95

    $default  reduce using rule 54 (Exp)


State 76

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   55    | NOT Exp .
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    DOT  shift, and go to state 94
    LB   shift, and go to state 95

    $default  reduce using rule 55 (Exp)


State 77

   63 Exp: LP error . RP

    RP  shift, and go to state 101


State 78

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   53    | LP Exp . RP
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    RP        shift, and go to state 102
    LB        shift, and go to state 95


State 79

   64 Exp: LB error . RB

    RB  shift, and go to state 103


State 80

   33 Stmt: RETURN Exp . SEMI
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    SEMI      shift, and go to state 104
    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    LB        shift, and go to state 95


State 81

   34 Stmt: IF LP . Exp RP Stmt
   35     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 105


State 82

   36 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 106


State 83

   27 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 27 (CompSt)


State 84

   29 StmtList: Stmt StmtList .

    $default  reduce using rule 29 (StmtList)


State 85

   31 Stmt: Exp SEMI .

    $default  reduce using rule 31 (Stmt)


State 86

   45 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 107


State 87

   48 Exp: Exp RELOP . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 108


State 88

   49 Exp: Exp PLUS . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 109


State 89

   50 Exp: Exp MINUS . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 110


State 90

   51 Exp: Exp STAR . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 111


State 91

   52 Exp: Exp DIV . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 112


State 92

   46 Exp: Exp AND . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 113


State 93

   47 Exp: Exp OR . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 114


State 94

   59 Exp: Exp DOT . ID

    ID  shift, and go to state 115


State 95

   58 Exp: Exp LB . Exp RB

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 116


State 96

   44 Dec: VarDec ASSIGNOP Exp .
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    LB        shift, and go to state 95

    $default  reduce using rule 44 (Dec)


State 97

   42 DecList: Dec COMMA DecList .

    $default  reduce using rule 42 (DecList)


State 98

   57 Exp: ID LP RP .

    $default  reduce using rule 57 (Exp)


State 99

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   65 Args: Exp . COMMA Args
   66     | Exp .

    COMMA     shift, and go to state 117
    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    LB        shift, and go to state 95

    $default  reduce using rule 66 (Args)


State 100

   56 Exp: ID LP Args . RP

    RP  shift, and go to state 118


State 101

   63 Exp: LP error RP .

    $default  reduce using rule 63 (Exp)


State 102

   53 Exp: LP Exp RP .

    $default  reduce using rule 53 (Exp)


State 103

   64 Exp: LB error RB .

    $default  reduce using rule 64 (Exp)


State 104

   33 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 33 (Stmt)


State 105

   34 Stmt: IF LP Exp . RP Stmt
   35     | IF LP Exp . RP Stmt ELSE Stmt
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    RP        shift, and go to state 119
    LB        shift, and go to state 95


State 106

   36 Stmt: WHILE LP Exp . RP Stmt
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    RP        shift, and go to state 120
    LB        shift, and go to state 95


State 107

   45 Exp: Exp . ASSIGNOP Exp
   45    | Exp ASSIGNOP Exp .
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    LB        shift, and go to state 95

    $default  reduce using rule 45 (Exp)


State 108

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   48    | Exp RELOP Exp .
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    PLUS   shift, and go to state 88
    MINUS  shift, and go to state 89
    STAR   shift, and go to state 90
    DIV    shift, and go to state 91
    DOT    shift, and go to state 94
    LB     shift, and go to state 95

    $default  reduce using rule 48 (Exp)


State 109

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   49    | Exp PLUS Exp .
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    STAR  shift, and go to state 90
    DIV   shift, and go to state 91
    DOT   shift, and go to state 94
    LB    shift, and go to state 95

    $default  reduce using rule 49 (Exp)


State 110

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   50    | Exp MINUS Exp .
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    STAR  shift, and go to state 90
    DIV   shift, and go to state 91
    DOT   shift, and go to state 94
    LB    shift, and go to state 95

    $default  reduce using rule 50 (Exp)


State 111

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   51    | Exp STAR Exp .
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    DOT  shift, and go to state 94
    LB   shift, and go to state 95

    $default  reduce using rule 51 (Exp)


State 112

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   52    | Exp DIV Exp .
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    DOT  shift, and go to state 94
    LB   shift, and go to state 95

    $default  reduce using rule 52 (Exp)


State 113

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   46    | Exp AND Exp .
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    RELOP  shift, and go to state 87
    PLUS   shift, and go to state 88
    MINUS  shift, and go to state 89
    STAR   shift, and go to state 90
    DIV    shift, and go to state 91
    DOT    shift, and go to state 94
    LB     shift, and go to state 95

    $default  reduce using rule 46 (Exp)


State 114
